--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,11 +2,7 @@
 
   <div class="field">
     <%= f.label :content %><br />
-    <%= f.text_field :content %>
-  </div>
-  <div class="field">
-    <%= f.label :user_id %><br />
-    <%= f.text_field :user_id %>
+    <%= f.text_area :content %>
   </div>
   <div class="actions">
     <%= f.submit %>
