--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,12 @@
-<h1>Posts</h1>
+<h1>These are your Squmbles:</h1>
 
 <ul class="post">
   <% @posts.each do |post| %>
-    <%= post.content %>
-    <%= post.created_at %>
+    <div class="post">
+      <%= post.content %>
+      <%= post.created_at %>
+    </div>
   <% end %>
 </ul>
+
+<%= link_to '<button type="button">New Squmble</button>'.html_safe, new_post_path %>
