--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@post) do |f| %>
+<%= simple_form_for(@post) do |f| %>
 
   <div class="field">
-    <%= f.label :content %><br />
-    <%= f.text_area :content %>
+    <%= f.input :content, :as => :text %>
   </div>
+  <br />
   <div class="actions">
-    <%= f.submit %>
+    <%= f.button :submit, "Create Squmble" %>
   </div>
 <% end %>
